[package]
name = "tiny-fields"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { version = "0.4.13", features = ["audio"] }
quad-storage = "0.1.3"
futures = "0.3.31"
strum = "0.27.1"
strum_macros = "0.27.1"